--- a/package.json
+++ b/package.json
@@ -2,11 +2,17 @@
   "name": "promoforge-backend",
   "version": "1.0.0",
   "description": "Backend API for PromoForge promo code management system",
+  "type": "module",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "jest"
+    "test": "jest",
+    "setup-db": "node scripts/setup-database.js",
+    "reset-db": "node scripts/reset-database.js",
+    "check-db": "node scripts/check-database.js",
+    "test-routes": "node scripts/test-routes.js",
+    "postinstall": "node scripts/setup-database.js"
   },
   "keywords": ["promo", "codes", "api", "express"],
   "author": "",
