--- a/package.json
+++ b/package.json
@@ -7,31 +7,47 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "jest",
+    "test": "node scripts/run-tests.js",
+    "test:simple": "npx jest tests/simple.test.js --config jest.simple.config.js",
+    "test:api-offline": "npx jest tests/api-offline.test.js --config jest.simple.config.js",
+    "test:watch": "jest --watch --detectOpenHandles --forceExit",
+    "test:coverage": "jest --coverage --detectOpenHandles --forceExit",
+    "test:auth": "jest tests/auth.test.js --detectOpenHandles --forceExit",
+    "test:promo": "jest tests/promo.test.js --detectOpenHandles --forceExit",
+    "test:integration": "jest tests/integration.test.js --detectOpenHandles --forceExit",
+    "test:health": "jest tests/health.test.js --detectOpenHandles --forceExit",
     "setup-db": "node scripts/setup-database.js",
     "reset-db": "node scripts/reset-database.js",
     "check-db": "node scripts/check-database.js",
     "test-routes": "node scripts/test-routes.js",
     "postinstall": "node scripts/setup-database.js"
   },
-  "keywords": ["promo", "codes", "api", "express"],
+  "keywords": [
+    "promo",
+    "codes",
+    "api",
+    "express"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "dotenv": "^16.3.1",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "sqlite3": "^5.1.6",
     "axios": "^1.6.2",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
-    "express-validator": "^7.0.1"
+    "express-validator": "^7.0.1",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
+    "jest": "^29.7.0",
+    "node-fetch": "^3.3.2",
     "nodemon": "^3.0.2",
-    "jest": "^29.7.0"
+    "supertest": "^6.3.3"
   },
   "engines": {
     "node": ">=24.10.0"
