--- a/env.example
+++ b/env.example
@@ -5,12 +5,8 @@ NODE_ENV=development
 # JWT Secret for authentication
 JWT_SECRET=your-super-secret-jwt-key-here
 
-# API Key for external API access
+# API Key for promo code generation
 API_KEY=your-api-key-here
-
-# External API Configuration
-EXTERNAL_API_BASE_URL=https://api.external-promo-service.com
-EXTERNAL_API_KEY=your-external-api-key-here
 
 # Database Configuration
 DATABASE_PATH=./database.sqlite
