--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
+    "start:prod": "pm2 start server.js --name PromoForge --interpreter /root/.nvm/versions/node/v24.5.0/bin/node",
     "start": "node server.js",
     "dev": "nodemon server.js",
     "test": "node scripts/run-tests.js",
