--- a/env.example
+++ b/env.example
@@ -14,3 +14,6 @@ DATABASE_PATH=./database.sqlite
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
+
+# API URLs
+API_BASE_URL_PROD=https://example.com/api
